@@ -55,6 +55,19 @@ import|;
 end_import
 begin_import
 import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|util
+operator|.
+name|IOUtils
+import|;
+end_import
+begin_import
+import|import
 name|java
 operator|.
 name|util
@@ -418,19 +431,20 @@ comment|// open the compound stream
 name|IndexOutput
 name|os
 init|=
-literal|null
-decl_stmt|;
-try|try
-block|{
-name|os
-operator|=
 name|directory
 operator|.
 name|createOutput
 argument_list|(
 name|fileName
 argument_list|)
-expr_stmt|;
+decl_stmt|;
+name|IOException
+name|priorException
+init|=
+literal|null
+decl_stmt|;
+try|try
+block|{
 comment|// Write the Version info - must be a VInt because CFR reads a VInt
 comment|// in older versions!
 name|os
@@ -536,16 +550,6 @@ argument_list|)
 expr_stmt|;
 comment|// Open the files and copy their data into the stream.
 comment|// Remember the locations of each file's data section.
-name|byte
-name|buffer
-index|[]
-init|=
-operator|new
-name|byte
-index|[
-literal|16384
-index|]
-decl_stmt|;
 for|for
 control|(
 name|FileEntry
@@ -568,8 +572,6 @@ argument_list|(
 name|fe
 argument_list|,
 name|os
-argument_list|,
-name|buffer
 argument_list|)
 expr_stmt|;
 block|}
@@ -628,31 +630,31 @@ name|close
 argument_list|()
 expr_stmt|;
 block|}
-finally|finally
-block|{
-if|if
-condition|(
-name|os
-operator|!=
-literal|null
-condition|)
-try|try
-block|{
-name|os
-operator|.
-name|close
-argument_list|()
-expr_stmt|;
-block|}
 catch|catch
 parameter_list|(
 name|IOException
 name|e
 parameter_list|)
-block|{ }
+block|{
+name|priorException
+operator|=
+name|e
+expr_stmt|;
+block|}
+finally|finally
+block|{
+name|IOUtils
+operator|.
+name|closeSafely
+argument_list|(
+name|priorException
+argument_list|,
+name|os
+argument_list|)
+expr_stmt|;
 block|}
 block|}
-comment|/** Copy the contents of the file with specified extension into the      *  provided output stream. Use the provided buffer for moving data      *  to reduce memory allocation.      */
+comment|/**    * Copy the contents of the file with specified extension into the provided    * output stream.    */
 DECL|method|copyFile
 specifier|private
 name|void
@@ -663,10 +665,6 @@ name|source
 parameter_list|,
 name|IndexOutput
 name|os
-parameter_list|,
-name|byte
-name|buffer
-index|[]
 parameter_list|)
 throws|throws
 name|IOException
@@ -674,7 +672,14 @@ block|{
 name|IndexInput
 name|is
 init|=
-literal|null
+name|directory
+operator|.
+name|openInput
+argument_list|(
+name|source
+operator|.
+name|file
+argument_list|)
 decl_stmt|;
 try|try
 block|{
@@ -686,17 +691,6 @@ operator|.
 name|getFilePointer
 argument_list|()
 decl_stmt|;
-name|is
-operator|=
-name|directory
-operator|.
-name|openInput
-argument_list|(
-name|source
-operator|.
-name|file
-argument_list|)
-expr_stmt|;
 name|long
 name|length
 init|=
@@ -705,65 +699,14 @@ operator|.
 name|length
 argument_list|()
 decl_stmt|;
-name|long
-name|remainder
-init|=
-name|length
-decl_stmt|;
-name|int
-name|chunk
-init|=
-name|buffer
-operator|.
-name|length
-decl_stmt|;
-while|while
-condition|(
-name|remainder
-operator|>
-literal|0
-condition|)
-block|{
-name|int
-name|len
-init|=
-operator|(
-name|int
-operator|)
-name|Math
-operator|.
-name|min
-argument_list|(
-name|chunk
-argument_list|,
-name|remainder
-argument_list|)
-decl_stmt|;
-name|is
-operator|.
-name|readBytes
-argument_list|(
-name|buffer
-argument_list|,
-literal|0
-argument_list|,
-name|len
-argument_list|,
-literal|false
-argument_list|)
-expr_stmt|;
 name|os
 operator|.
-name|writeBytes
+name|copyBytes
 argument_list|(
-name|buffer
+name|is
 argument_list|,
-name|len
+name|length
 argument_list|)
-expr_stmt|;
-name|remainder
-operator|-=
-name|len
 expr_stmt|;
 if|if
 condition|(
@@ -771,48 +714,15 @@ name|checkAbort
 operator|!=
 literal|null
 condition|)
-comment|// Roughly every 2 MB we will check if
-comment|// it's time to abort
+block|{
 name|checkAbort
 operator|.
 name|work
 argument_list|(
-literal|80
+name|length
 argument_list|)
 expr_stmt|;
 block|}
-comment|// Verify that remainder is 0
-if|if
-condition|(
-name|remainder
-operator|!=
-literal|0
-condition|)
-throw|throw
-operator|new
-name|IOException
-argument_list|(
-literal|"Non-zero remainder length after copying: "
-operator|+
-name|remainder
-operator|+
-literal|" (id: "
-operator|+
-name|source
-operator|.
-name|file
-operator|+
-literal|", length: "
-operator|+
-name|length
-operator|+
-literal|", buffer size: "
-operator|+
-name|chunk
-operator|+
-literal|")"
-argument_list|)
-throw|;
 comment|// Verify that the output length diff is equal to original file
 name|long
 name|endPtr
@@ -851,12 +761,6 @@ throw|;
 block|}
 finally|finally
 block|{
-if|if
-condition|(
-name|is
-operator|!=
-literal|null
-condition|)
 name|is
 operator|.
 name|close
