@@ -161,6 +161,21 @@ name|apache
 operator|.
 name|lucene
 operator|.
+name|store
+operator|.
+name|SimpleFSDirectory
+operator|.
+name|SimpleFSIndexInput
+import|;
+end_import
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
 name|util
 operator|.
 name|IOUtils
@@ -302,6 +317,19 @@ init|=
 name|DEFAULT_READ_CHUNK_SIZE
 decl_stmt|;
 comment|// LUCENE-1566
+comment|/**    * Chunk size used to read when using FileChannel API. If an attempt to read a    * large file is made without limiting the chunk size, an OOM may occur.    */
+DECL|field|CHANNEL_CHUNK_SIZE
+specifier|private
+specifier|static
+specifier|final
+name|long
+name|CHANNEL_CHUNK_SIZE
+init|=
+literal|1
+operator|<<
+literal|21
+decl_stmt|;
+comment|// Use 2MB chunk size - LUCENE-2537
 comment|// returns the canonical version of the directory, creating it if it doesn't exist.
 DECL|method|getCanonicalPath
 specifier|private
@@ -1550,13 +1578,11 @@ operator|.
 name|getChannel
 argument_list|()
 expr_stmt|;
-name|output
-operator|.
-name|transferFrom
+name|copy
 argument_list|(
 name|input
 argument_list|,
-literal|0
+name|output
 argument_list|,
 name|input
 operator|.
@@ -1605,6 +1631,78 @@ name|dest
 argument_list|)
 expr_stmt|;
 block|}
+block|}
+comment|/**    * Copies the content of a given {@link FileChannel} to a destination one. The    * copy is done in chunks of 2MB because if transferFrom is used without a    * limit when copying a very large file, then an OOM may be thrown (depends on    * the state of the RAM in the machine, as well as the OS used). Performance    * measurements showed that chunk sizes larger than 2MB do not result in much    * faster file copy, therefore we limit the size to be safe with different    * file sizes and systems.    */
+DECL|method|copy
+specifier|static
+name|void
+name|copy
+parameter_list|(
+name|FileChannel
+name|input
+parameter_list|,
+name|FileChannel
+name|output
+parameter_list|,
+name|long
+name|numBytes
+parameter_list|)
+throws|throws
+name|IOException
+block|{
+name|long
+name|pos
+init|=
+name|output
+operator|.
+name|position
+argument_list|()
+decl_stmt|;
+name|long
+name|writeTo
+init|=
+name|numBytes
+operator|+
+name|pos
+decl_stmt|;
+while|while
+condition|(
+name|pos
+operator|<
+name|writeTo
+condition|)
+block|{
+name|pos
+operator|+=
+name|output
+operator|.
+name|transferFrom
+argument_list|(
+name|input
+argument_list|,
+name|pos
+argument_list|,
+name|Math
+operator|.
+name|min
+argument_list|(
+name|CHANNEL_CHUNK_SIZE
+argument_list|,
+name|writeTo
+operator|-
+name|pos
+argument_list|)
+argument_list|)
+expr_stmt|;
+block|}
+comment|// transferFrom does not change the position of the channel. Need to change it manually
+name|output
+operator|.
+name|position
+argument_list|(
+name|pos
+argument_list|)
+expr_stmt|;
 block|}
 DECL|class|FSIndexOutput
 specifier|protected
@@ -1719,6 +1817,101 @@ argument_list|,
 name|size
 argument_list|)
 expr_stmt|;
+block|}
+annotation|@
+name|Override
+DECL|method|copyBytes
+specifier|public
+name|void
+name|copyBytes
+parameter_list|(
+name|DataInput
+name|input
+parameter_list|,
+name|long
+name|numBytes
+parameter_list|)
+throws|throws
+name|IOException
+block|{
+comment|// Optimized copy only if the number of bytes to copy is larger than the
+comment|// buffer size, and the given IndexInput supports FileChannel copying ..
+comment|// NOTE: the below check relies on NIOIndexInput extending Simple. If that
+comment|// changes in the future, we should change the check as well.
+if|if
+condition|(
+name|numBytes
+operator|>
+name|BUFFER_SIZE
+operator|&&
+name|input
+operator|instanceof
+name|SimpleFSIndexInput
+condition|)
+block|{
+comment|// flush any bytes in the buffer
+name|flush
+argument_list|()
+expr_stmt|;
+comment|// do the optimized copy
+name|FileChannel
+name|in
+init|=
+operator|(
+operator|(
+name|SimpleFSIndexInput
+operator|)
+name|input
+operator|)
+operator|.
+name|file
+operator|.
+name|getChannel
+argument_list|()
+decl_stmt|;
+name|FileChannel
+name|out
+init|=
+name|file
+operator|.
+name|getChannel
+argument_list|()
+decl_stmt|;
+name|copy
+argument_list|(
+name|in
+argument_list|,
+name|out
+argument_list|,
+name|numBytes
+argument_list|)
+expr_stmt|;
+comment|// corrects the position in super (BufferedIndexOutput), so that calls
+comment|// to getFilePointer will return the correct pointer.
+comment|// Perhaps a specific method is better?
+name|super
+operator|.
+name|seek
+argument_list|(
+name|out
+operator|.
+name|position
+argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
+else|else
+block|{
+name|super
+operator|.
+name|copyBytes
+argument_list|(
+name|input
+argument_list|,
+name|numBytes
+argument_list|)
+expr_stmt|;
+block|}
 block|}
 annotation|@
 name|Override
